[package]
name = "daoexamples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]
name = "daoexamples"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []

[dependencies]
anchor-lang = { version="0.24.2", features=[] }
anchor-spl = { version="0.24.2", features=["dex"] }
volt-abi = { path = "../volt-abi", features = ["cpi"]}
num-traits = "0.2.14"
solana-program = "1.9.13"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-stake-pool = "0.6.3"
vipers = "2.0.3"
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint"
] }
arrayref = "0.3.6"
num-derive = "0.2"
num_enum = "0.5.0"
