[package]
name = "volt-abi"
version = "0.1.0"
edition = "2021"
authors = ["alex wlezien <alex@friktionlabs.com>"]
description = "Interface for composing on Friktion Volt Program"
homepage = "https://app.friktion.fi"
repository = "https://github.com/Friktion-Labs/external"
keywords = ["solana", "friktion", "volt", "program", "abi"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "volt_abi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []

[dependencies]
anchor-lang = { version="0.24.2", features=["init-if-needed"] }
anchor-spl = { version="0.24.2", features=["dex"] }
solana-program = "^1.8.14"