[package]
name = "volt-abi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "volt_abi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []

[dependencies]
anchor-lang = { version="0.22.1", features=["init-if-needed"] }
anchor-spl = { version="0.22.1", features=["dex"] }
solana-program = "1.8.2"